--- a/tpl/testtemplate.jinja
+++ b/tpl/testtemplate.jinja
@@ -7,6 +7,11 @@ import export_to_excel
 {% endfor %}
 
 
+{% if before_row_populate %}
+{{ before_row_populate }}
+{% endif %}
+
+
 {% macro show_map_entry(map_entry) -%}
 "{{map_entry.name}}" : "{{map_entry.letter}}"
 {%- endmacro %}
